tests/invalid/type/arity_list_join_too_few.pts
function main() : void {
    list<string> xs = ["a", "b"];
    string s = xs.join();
}
